@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="js/energy.js"></script>
 		<script type="text/javascript" src="js/resources.js"></script>
 		<script type="text/javascript" src="js/minimap.js"></script>
+		<script type="text/javascript" src="js/player.js"></script>
 		<script type="text/javascript" src="js/weapons/laser_rifle.js"></script>
 		<script type="text/javascript" src="js/buildings/abstract.js"></script>
 		<script type="text/javascript" src="js/buildings/headquarter.js"></script>
