@@ -21,6 +21,7 @@ var CELL_TYPE_BUILDING = 4;
 
 var PLAYER_NEUTRAL = 0;
 var PLAYER_HUMAN = 1;
+var PLAYER_COMPUTER1 = 2;
 
 var AUDIO_TYPE = 'ogg';
 
