@@ -1,6 +1,7 @@
 Build 23 (27.11.2012)
 - Added neutral player
 - Added neutral objects: Water well, Taelon mine
+- Selection colors are changing depending on player belonging
 
 Build 22 (26.11.2012)
 - Added unit producing indicator on right panel. It not looks like an original one, but very similar.
